force-app/main/default/objects/AV_ProductExperience__c/AV_ProductExperience__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene la relación entre PF y Experiencia</description>
    <label>ProductoFicha-Experiencia</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Producto Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductoFicha-Experiencia</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>