force-app/main/default/objects/AV_ProductExperience__c/fields/AV_ExperienciaNegocio__c.field-meta.xml
<CustomField>
    <fullName>AV_ExperienciaNegocio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Experiencia (Negocio) relacionado con el PF</description>
    <label>Experiencia Negocio</label>
    <referenceTo>AV_ExperienceBusiness__c</referenceTo>
    <relationshipLabel>ProductoFicha-Experiencia</relationshipLabel>
    <relationshipName>ProductoFicha_Experiencia</relationshipName>
    <type>Lookup</type>
</CustomField>