force-app/main/default/objects/AV_ProductExperience__c/fields/AV_ProductoFicha__c.field-meta.xml
<CustomField>
    <fullName>AV_ProductoFicha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PF relacionado</description>
    <label>Producto Ficha</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ProductoFicha-Experiencia</relationshipLabel>
    <relationshipName>ProductoFicha_Experiencia</relationshipName>
    <type>Lookup</type>
</CustomField>