force-app/main/default/objects/AV_ProductExperience__c/recordTypes/AV_ProductoFichaExperiencia.recordType-meta.xml
<RecordType>
    <fullName>AV_ProductoFichaExperiencia</fullName>
    <active>true</active>
    <label>ProductoFicha Experiencia</label>
</RecordType>